infra/k8s/20-core-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pravah-core
  namespace: pravah-system
  labels:
    app.kubernetes.io/name: pravah-core
    app.kubernetes.io/component: control-plane
    app.kubernetes.io/part-of: pravah
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: pravah-core
  template:
    metadata:
      labels:
        app: pravah-core
        app.kubernetes.io/name: pravah-core
        app.kubernetes.io/component: control-plane
    spec:
      serviceAccountName: pravah-core-sa
      containers:
        - name: core-app
          image: 716659702697.dkr.ecr.ap-south-1.amazonaws.com/pravah-core-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http-core
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1800m"
              memory: "2048Mi"
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 10"]
          volumeMounts:
            - name: transcode-scratch
              mountPath: /tmp/pravah-transcode
      volumes:
        - name: transcode-scratch
          emptyDir: {}
