infra/k8s/31-edge-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pravah-edge-service
  namespace: pravah-system
  labels:
    app.kubernetes.io/name: pravah-edge-service
    app.kubernetes.io/component: data-plane
    app.kubernetes.io/part-of: pravah
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: http-proxy
      protocol: TCP
    - port: 3001
      targetPort: 3001
      name: http-edge
      protocol: TCP
  selector:
    app: pravah-edge
